<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Simple Password Generator</string>
    <string name="letters">Capital Letters</string>
    <string name="small_letters">Small Letters</string>
    <string name="numbers">Numbers</string>
    <string name="special_chars">Special characters</string>
    <string name="length">Length</string>
    <string name="quantity">Quantity</string>
    <string name="generate">Generate</string>
    <string name="copy">Copy</string>
    <string name="copy_all">Copy All</string>
    <string name="copy_message">Passwords copied</string>
	<string name="loading_message">Please wait&#8230;</string>
	<string name="no_password">Please, select at least one password</string>
    <string name="confirm_remove_passwords">Do you want to remove these passwords?</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_ok">Ok</string>
    <string name="button_cancel">Cancel</string>
    <string name="save_passwords">Save passwords</string>
    <string name="save_message">Passwords saved</string>
    <string name="keep_config">Keep last configuration</string>
    <string name="no_repeat">No repeating characters</string>
    <string name="no_save_passwords">No saved passwords</string>
    <string name="show_reg_ex">Show regular expression</string>
</resources>