<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

    <RelativeLayout
        android:id="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_default"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp">

        <RelativeLayout
            android:id="@+id/rootLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/textViewLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/length"
                android:textColor="@color/label_text"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textAllCaps="true"/>

            <EditText
                android:id="@+id/editTextLength"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:maxLength="2"
                android:text="12"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:textSize="18sp">
                <requestFocus />
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rootQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:layout_below="@+id/rootLength">

            <TextView
                android:id="@+id/textViewQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/label_text"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textAllCaps="true"/>

            <EditText
                android:id="@+id/editTextQuantity"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:maxLength="2"
                android:text="5"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:textSize="18sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rootChars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_below="@+id/rootQuantity">

            <CheckBox
                android:id="@+id/checkBoxLetters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="checkBoxClickHandler"
                android:text="@string/letters"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:layout_marginBottom="16dp"/>

            <CheckBox
                android:id="@+id/checkBoxNumbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="checkBoxClickHandler"
                android:text="@string/numbers"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/checkBoxLetters"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:layout_marginBottom="16dp"/>

            <CheckBox
                android:id="@+id/checkBoxSpecialChar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkBoxClickHandler"
                android:text="@string/special_chars"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/checkBoxNumbers"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/editTextRegEx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="[a-zA-Z0-9]"
                android:layout_below="@+id/checkBoxSpecialChar"
                android:textSize="18sp"
                android:maxLines="1"
                android:inputType="text"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:layout_below="@+id/editTextRegEx"/>

        </RelativeLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/buttonGenerate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="generateClickHandler"
        android:text="@string/generate"
        android:background="@drawable/btn_default_selector"
        android:textColor="@color/btn_default_text_selector"
        android:textStyle="normal"
        android:textSize="22sp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:textAllCaps="true"
        android:layout_below="@+id/options"/>

</RelativeLayout>